...
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    tools:context="com.openclassrooms.realestatemanager.ui.view.AddFlatActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">
...
                        android:src="@drawable/ic_add_photo_off"/>
                </TableRow>

            </TableLayout>

            <TableLayout
                android:id="@+id/form_flat_presentation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                android:layout_margin="@dimen/basic_padding"
                android:paddingBottom="@dimen/basic_padding"
                android:stretchColumns="*">
...
                        android:textColor="@color/black"
                        android:text="@string/summary"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_small" />

                    <EditText
                        android:id="@+id/edit_summary"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:padding="@dimen/basic_padding"
                        android:textAlignment="center"
...
                        android:textColor="@color/black"
                        android:text="@string/description"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_small" />

                    <EditText
                        android:id="@+id/edit_description"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:padding="@dimen/basic_padding"
                        android:textAlignment="center"
...
                        android:textColor="@color/black"
                        android:text="@string/surface_form"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_small" />

                    <EditText
                        android:id="@+id/edit_surface"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:padding="@dimen/basic_padding"
                        android:textAlignment="center"
...
                        android:textColor="@color/black"
                        android:text="@string/price"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_small" />

                    <EditText
                        android:id="@+id/edit_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:padding="@dimen/basic_padding"
                        android:background="@color/light_grey_transparent"
...
                        android:inputType="number"
                        android:hint="@string/edit_price"/>
                </TableRow>

            </TableLayout>
            <TableLayout
                android:id="@+id/form_flat_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/form_flat_presentation"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/light_green"
...
                        android:textColor="@color/black"
                        android:text="@string/city"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_small" />

                    <EditText
                        android:id="@+id/edit_city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical|start"
                        android:padding="@dimen/basic_padding"
                        android:background="@color/light_grey_transparent"
...
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_flat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/btn_add_description"
        android:clickable="true"
        android:focusable="true"
...
