<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/secondary_menu_add"
        android:icon="@drawable/ic_add"
        app:showAsAction="always"
        android:title="@string/add">
    </item>
    <item
        android:id="@+id/secondary_menu_edit"
        android:icon="@drawable/ic_edit"
        app:showAsAction="always"
        android:title="@string/edit">
    </item>
    <item
        android:id="@+id/secondary_menu_map"
        android:icon="@drawable/ic_map"
        app:showAsAction="always"
        android:title="@string/map">
    </item>
    <item
        android:id="@+id/secondary_menu_list"
        android:icon="@drawable/ic_list"
        app:showAsAction="always"
        android:title="@string/list">
    </item>
    <item
        android:id="@+id/secondary_menu_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/search">
    </item>

</menu>