...
    <string name="loan_result">Your mensuality will be of\n <b>%1$d €</b>\n during <b>%2$d</b> years.</string>
    <string name="close">Close</string>
    <string name="warning_wrong_contribution">Lucky you !\nYou got the money !</string>
    <string name="warning_wrong_information">Something is going wrong here !\nCheck your value &amp; try again !</string>
    <string name="take_picture">Take picture</string>
    <string name="gallery">Choose from gallery</string>
    <string name="btn_add_description">Add button</string>

    <string name="flattype1">Flat</string>
    <string name="flattype2">Duplex</string>
    <string name="flattype3">House</string>
    <string name="flattype4">Loft</string>
    <string name="flattype5">Basement duplex</string>
...
